Bug 1282433 - Use dbus PropertiesChanged signal for notification of battery status changes, r=karlt

From UPower 0.99, DeviceChanged has been removed from the UPower interface and
PropertiesChanged support added.